--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -43,3 +43,15 @@
 [[constraint]]
   name = "github.com/stretchr/testify"
   version = "1.3.0"
+
+[[constraint]]
+  name = "github.com/gorilla/mux"
+  version = "1.7.1"
+
+[[constraint]]
+  name = "github.com/codegangsta/negroni"
+  version = "1.0.0"
+
+[[constraint]]
+  name = "github.com/getsentry/raven-go"
+  version = "0.2.0"
