--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,8 @@ git:
 install: true
 
 before_script:
-  - make setup
-  - make copy-config
+  - go install github.com/golang/dep/cmd/dep
+  - go install github.com/golang/lint/golint
 
 script:
-  - make test
-  - make build
+  - make test-ci
