--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -55,3 +55,15 @@
 [[constraint]]
   name = "github.com/getsentry/raven-go"
   version = "0.2.0"
+
+[[constraint]]
+  name = "github.com/gojektech/heimdall"
+  version = "v3.0.1"
+
+[[constraint]]
+  name = "gopkg.in/h2non/gock.v1"
+  version = "1.0.14"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/ad2games/vcr-go"
