--- a/application.yml.sample
+++ b/application.yml.sample
@@ -9,3 +9,10 @@ REDIS_PORT: "6379"
 REDIS_POOL: "10"
 
 WORKER_REDIS_ADDRESS: "127.0.0.1:6379"
+
+ORIGIN_SERVER_BASE_URL: "http://mangacanblog.com"
+
+HYSTRIX_TIMEOUT_MS: 100000
+HYSTRIX_MAX_CONCURRENT_REQUESTS: 100
+HYSTRIX_SLEEP_WINDOW_MS: 100
+HYSTRIX_ERROR_THRESHOLD: 1000
