Export popular manga tags as env config

--- a/application.yml.sample
+++ b/application.yml.sample
@@ -16,3 +16,5 @@ HYSTRIX_TIMEOUT_MS: 100000
 HYSTRIX_MAX_CONCURRENT_REQUESTS: 100
 HYSTRIX_SLEEP_WINDOW_MS: 100
 HYSTRIX_ERROR_THRESHOLD: 1000
+
+POPULAR_MANGA_TAGS: "one_piece, nanatsu_no_taizai, shokugeki_no_soma, fairy_tail, boruto"
