--- a/application.yml.sample
+++ b/application.yml.sample
@@ -18,3 +18,4 @@ HYSTRIX_SLEEP_WINDOW_MS: 100
 HYSTRIX_ERROR_THRESHOLD: 1000
 
 POPULAR_MANGA_TAGS: "one_piece, nanatsu_no_taizai, shokugeki_no_soma, fairy_tail, boruto, onepunch_man"
+ADS_CONTENT_TAGS: "iklan, all_anime, ik.jpg, rekrut, ilan.jpg, animeindonesia, IKLAN2, Credit, lowongan, z100.png"
