--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ language: go
 
 env:
   - GO111MODULE=on
-  - GOFLAGS='-mod vendor'
 
 go:
   - 1.11.x
@@ -17,6 +16,7 @@ install: true
 before_script:
   - go install github.com/golang/dep/cmd/dep
   - go install github.com/golang/lint/golint
+  - go install github.com/axw/gocov/gocov
 
 script:
   - make test-ci
