--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ dist: xenial
 
 language: go
 
-env:
-  - GO111MODULE=on
-
 go:
   - 1.11.x
 
@@ -14,9 +11,9 @@ git:
 install: true
 
 before_script:
-  - go install github.com/golang/dep/cmd/dep
-  - go install github.com/golang/lint/golint
-  - go install github.com/axw/gocov/gocov
+  - go get -u github.com/golang/dep/cmd/dep
+  - go get -u github.com/golang/lint/golint
+  - go get -u github.com/axw/gocov/gocov
 
 script:
   - make test-ci
