--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ before_script:
   - go get -u github.com/golang/dep/cmd/dep
   - go get -u github.com/golang/lint/golint
   - go get -u github.com/axw/gocov/gocov
+  - go get -u github.com/mattn/goveralls
 
 script:
   - make test-ci
+  - $GOPATH/bin/goveralls -service=travis-ci
