Replace manual go get setup with make setup in travis ci before script

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,7 @@ git:
 install: true
 
 before_script:
-  - go get -u github.com/golang/dep/cmd/dep
-  - go get -u github.com/golang/lint/golint
-  - go get -u github.com/mattn/goveralls
+  - make setup
 
 script:
   - make test-ci
